adding missing files

--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
-    <!-- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"> -->
-    <title>NASSCOM</title>
 
-    <!-- viewport for latest mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!-- viewport for Older mobile device -->
-    <meta name="HandheldFriendly" content="true"/>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <link type="text/css" rel="stylesheet" href="css/style.css"/>
-    
-	<!--[if lt IE 9]>
-    <script type="text/javascript" src="js/html5.js"></script>
-    <script type="text/javascript" src="js/selectivizr-min.js"></script>
-    <![endif]-->
-
+  <title>Nasscom</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
 	<div class="login">
 		<a href="javascript:void(0);" class="loginClose">
