--- a/article_view.html
+++ b/article_view.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-    <!-- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"> -->
-    <title>NASSCOM</title>
 
-    <!-- viewport for latest mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- viewport for Older mobile device -->
-    <meta name="HandheldFriendly" content="true" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <link type="text/css" rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-    <!--[if lt IE 9]>
-    <script type="text/javascript" src="js/html5.js"></script>
-    <script type="text/javascript" src="js/selectivizr-min.js"></script>
-    <![endif]-->
+  <title>Nasscom</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+
     <style>
         body {
             background: #F2F2F2 0% 0% no-repeat padding-box;
         }
-    </style>
+    </style> 
 </head>
 
 <body>
