navigation changes added in other pages

--- a/my-activity-mergedocs.html
+++ b/my-activity-mergedocs.html
@@ -90,13 +90,12 @@
             <div class="navbar-nav">
                 <ul class="clearfix">
                     <li class="home">
-                        <a href="#">
-                            <img src="images/home.png"> Home
+                        <a href="javascript:void(0);"> Home
+                            
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/myactivity.png"> My Activity
+                    <li class="myActivity active">
+                        <a href="javascript:void(0);"> My Activity
                         </a>
                     </li>
                 </ul>
