article view page updated

--- a/article_view.html
+++ b/article_view.html
@@ -150,7 +150,19 @@
 
     <!-- Main Content -->
     <Section id="content">
+        
         <div class="container article">
+            <div class="breadcrumb">
+                <ul>
+                    <li>
+                    <a href="#">Home</a> ></li>
+                    <li>
+                    <a href="#">Categories</a> ></li>
+                    <li>
+                    <a href="#">Reports</a>
+                    </li>
+                </ul>
+            </div>
             <div class="card-body">
                 <div class="Reports_img">
                     <img src="images/rep-img.png">
