filter design added

--- a/reports_filter.html
+++ b/reports_filter.html
@@ -173,7 +173,7 @@
   
           </div>
         </div>
-        
+
         <div class="breadcrumb">
             <ul>
               <li>
@@ -186,14 +186,37 @@
             </ul>
           </div>
 
-        <h4>1-3 of over 8 results for : "NLP"</h4>
-
         <div class="filter">
           <ul class="clearfix">
             <li class="one">
               <img src="images/filter.png"> </li>
             <li class="active">
               <a href="">Year</a>
+              <div class="filterPanel">
+                <div class="filter1">
+                  <ul>
+                    <li class="lArr"></li>
+                    <li>2019</li>
+                    <li class="rArr"></li>
+                  </ul>
+                </div>
+                <div class="filter2">
+                    <ul>
+                      <li>Jan</li>
+                      <li>Feb</li>
+                      <li>Mar</li>
+                      <li class="active">Apr</li>
+                      <li>May</li>
+                      <li>Jun</li>
+                      <li>Jul</li>
+                      <li class="active">Aug</li>
+                      <li class="active">Sep</li>
+                      <li>Oct</li>
+                      <li>Nov</li>
+                      <li>Dec</li>
+                    </ul>
+                </div>
+              </div>
             </li>
             <li>
               <a href="#">Segment</a>
